# ckroot

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ckroot/: Makefile  NEWS  config.h  config.status  configure  configure.ac  libtool
ckroot/autom4te.cache/: output.0  output.1  requests  traces.1
ckroot/po/: ChangeLog  Makefile  Makefile.in
ckroot/src/: Makefile  Makefile.am  Makefile.in  check_root.h  ckroot.h  main.c
ckroot/src/.deps/: main.Po
docs/source/: conf.py  index.rst
